--- a/MovieWeb/Views/Home/Landing.cshtml
+++ b/MovieWeb/Views/Home/Landing.cshtml
@@ -5,7 +5,7 @@
 @if (Model != null)
 {
     <a class="nav-link" asp-area=""
-       asp-controller="Verhuringen" asp-action="Index">
+       asp-controller="Verhuur" asp-action="Index">
         Ga naar verhuringen
     </a>
 }
